Añadido el mensaje de email enviado

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -5,5 +5,7 @@
     "BCC": "BCC",
     "SUBJECT": "Subject",
     "MESSAGE": "Message",
-    "SEND": "Send"
+    "SEND": "Send",
+    "ATTACHED_FILES": "Attached files",
+    "SEND_SUCCESS": "You email has been sent"
 }
